<resources>
    <string name="app_name">HairStyle</string>
    <string name="title_activity_side_bar">SideBar</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="action_settings">Settings</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="detail_place">
        O Salão de Beleza Hair Style, oferece uma equipe formada por especialistas com o objetivo de proporcionar
        experiências inovadoras. Com uma
        grande variedade de serviços para
        cabelo, rosto, mãos e pés. Contamos
        também com uma infraestrutura que
        proporciona conforto e bem-estar.
    </string>

    <string name="impact_detail_place">Hair Style, você brilha da cabeça aos pés</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="quem_somos">Quem Somos</string>
    <string name="minha_agenda">Minha Agenda</string>
    <string name="contato">Contato</string>
    <string name="avaliation">Avaliações</string>
    <string name="minha_conta">Minha Conta</string>
    <string name="sair">Sair</string>
    <string name="nome_titular">Nome titular</string>
    <string name="comments">comments</string>
    <string name="title_activity_testeeeeee">TESTEEEEEE</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_home">home</string>
    <string name="services_item">Serviços</string>
    <string name="compartilhar">Compartilhar</string>
    <string name="img_place">img_place</string>
    <string name="number_phone">(11) 0000-0000</string>
    <string name="address_hair">R. das Flores, 00 - São Paulo</string>
    <string name="todo">TODO</string>
    <string name="redes_sociais">Redes Sociais:</string>
    <string name="www_facebook_com_hairstyle">www.facebook.com/hairstyle/</string>
    <string name="ufeff_hairstyle">instagram.com.br/@hairstyle</string>
    <string name="facebook">facebook</string>
    <string name="instagram">instagram</string>
    <string name="nome_completo">Nome Completo</string>
    <string name="login">Login</string>
    <string name="salvar">SALVAR</string>
    <string name="confirmar_senha">Confirmar Senha</string>


    <string name="checkbox">com.example.hairstyle.checkbox</string>
    <string name="name">com.example.hairstyle.name</string>
    <string name="password">com.example.hairstyle.password</string>



</resources>


