<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/detailCompany"
            android:icon="@drawable/ic_assignment"
            android:title="@string/quem_somos" />
        <item
            android:id="@+id/my_service"
            android:icon="@drawable/ic_account"
            android:title="@string/services_item" />
        <item
            android:id="@+id/myAccount"
            android:icon="@drawable/ic_account"
            android:title="@string/minha_conta" />

        <item
            android:id="@+id/myAgend"
            android:icon="@drawable/ic_calendar"
            android:title="@string/minha_agenda" />
        <item
            android:id="@+id/contact"
            android:icon="@drawable/ic_contact"
            android:title="@string/contato"
            />

        <item
            android:id="@+id/avaliation"
            android:icon="@drawable/ic_avaliation"
            android:title="@string/avaliation"
            />

        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/compartilhar" />
        <item
            android:id="@+id/idExitApp"
            android:icon="@drawable/ic_exit"
            android:title="@string/sair" />
    </group>




</menu>
